Fix fixed card on small screens

--- a/app/styles/_cards.scss
+++ b/app/styles/_cards.scss
@@ -308,6 +308,11 @@
     top:0;
   }
 
+  .card-img-scroll {
+      position: fixed;
+      top: 2rem;
+      margin: 0 !important;
+  }
 }
 
 @media screen and (min-width:1200px) {
