--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -102,11 +102,6 @@ label, .label {
   display:none !important;
 }
 
-.card-img-scroll {
-    position: fixed;
-    top: 2rem;
-    margin: 0 !important;
-}
 
 .navbar {
   border:none;
